[package]
name = "ugit"
version = "0.1.0"
authors = ["Aborgen <alexanderborgen@gmail.com>"]
edition = "2018"
description = "A clone of git written in Rust, based on the architecture of https://www.leshenko.net/p/ugit"

[dependencies]
clap = "~2.33"
sha2 = "0.9.3"

[dev-dependencies]
serial_test = "0.5.1"
